--- a/app/bus/page.module.css
+++ b/app/bus/page.module.css
@@ -1,23 +1,27 @@
 .input {
-    margin-bottom: 20px;
     margin-top: 30px;
     padding: 10px;
     width: 300px;
     text-align: center;
-    display: flex;
-    justify-content: center;
     border: 1px solid #bbb;
 }
 
 .button {
-    display: flex;
-    justify-content: flex-end;
+    text-align: center;
+    margin-bottom: 50px;
+    width: 250px;
+    height: 42px;
 }
 
-#table {
+.table {
+    width: 100px;
     margin: 0px;
 }
 
 .icon{
     margin: 100px;
+}
+
+.placeholder {
+    background-color: 008000;
 }
