found and added image

--- a/app/page.module.css
+++ b/app/page.module.css
@@ -4,10 +4,8 @@
   left: 50%;
   transform: translate(-50%, -50%);
   color: white; /* Adjust text color for visibility against the background */
+  background-color: rgba(0, 0, 0, 0.4); /* Adjust the background color and opacity */
+  padding: 10px;
   text-align: center;
   z-index: 1; /* Ensure text is above the background image */
-}
-
-.text {
-  margin: 20px;
 }
